Closed
Bug 86922
Opened 24 years ago
Closed 24 years ago
Unable to launch with new/newly migrated profile
Categories
(SeaMonkey :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla0.9.2
People
(Reporter: agracebush, Assigned: ccarlen)
Details
(Keywords: regression, smoketest, Whiteboard: critical for 0.9.2)
Attachments
(2 files)
|
7.65 KB,
patch
|
Details | Diff | Splinter Review | |
|
5.17 KB,
patch
|
Details | Diff | Splinter Review |
Steps to reproduce:
(Tried on stub/full installer builds and tarball)
1. clear .mozilla
2. run with ./netscape -installer
3. 4.x profile should migrate (it does)
4. enter activation data (on 2nd or 3rd try- that's another bug)
actual results: no launch
expected results: launch with migrated profile
Same thing occurs with a new profile
I created profile in older build and was able to launch with that
this appears to go through profile manager and activation but adding Bhuvan and
Conrad to cc list just in case
| Assignee | ||
Comment 1•24 years ago
|
||
Is this Linux-only? Have you tried this on Mac or Windows?
Comment 2•24 years ago
|
||
i removed all other profiles and tried to launch using the 'default'
profile..and it actually worked!!
| Reporter | ||
Comment 3•24 years ago
|
||
Mac is ok, but Windows bug is bugscape 6573
Even though Shrirang and I removed all the existing profiles on my
Linux machine Redhat 6.2, (commercial build: 2001-06-20-08-trunk),
and then tried to launch using the 'default' profile or
created a new profile, it still did not launch.
It seemed to work fine on Shriang Linux machine, but not on my Linux machine
though.
| Assignee | ||
Comment 5•24 years ago
|
||
If we're talking about the commercial build, as the last comment is, that's
http://bugscape.mcom.com/show_bug.cgi?id=6758
Assignee: asa → ccarlen
Comment 6•24 years ago
|
||
This has regressed since 20010619.
You _must_ _have_ a ~/.netscape/ directory, and you must _not_ have a working
~/.mozilla directory to trigger the bug. Otherwise it starts up fine.
You can reproduce using just ./mozilla - it presents the migration dialog, and
if you click on OK, it will start migrating, create files in ~/.mozilla, and
hang. Strace output:
gettimeofday({993160685, 338619}, NULL) = 0
ioctl(7, 0x541b, [0]) = 0
poll([{fd=7, events=POLLIN}, {fd=15, events=POLLIN}, {fd=5, events=POLLIN}], 3,
8) = 0
gettimeofday({993160685, 357171}, NULL) = 0
gettimeofday({993160685, 357494}, NULL) = 0
ioctl(7, 0x541b, [0]) = 0
poll([{fd=7, events=POLLIN}, {fd=15, events=POLLIN}, {fd=5, events=POLLIN}], 3,
0) = 0
gettimeofday({993160685, 358571}, NULL) = 0
ioctl(7, 0x541b, [0]) = 0
poll([{fd=7, events=POLLIN}, {fd=15, events=POLLIN}, {fd=5, events=POLLIN}], 3,
8) = 0
You get the picture. Very critical bug.
Comment 7•24 years ago
|
||
This is a mozilla problem too.
Steps to reproduce:
1. rm -rf .mozilla
2. ./mozilla
3. select convert profile (not manage profiles)
Results:
cpmverting profile spinner pops up and then nothing happens. the console just
sits at "start of pref migration"
Additional information:
If you select Manage Profiles and do your migration from there it works.
Keywords: regression,
smoketest
Whiteboard: critical for 0.9.2
| Assignee | ||
Comment 8•24 years ago
|
||
Almost have the fix for this ready - It's the same thing (but with a different
window) as the problem in http://bugscape.mcom.com/show_bug.cgi?id=6758
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.2
| Assignee | ||
Comment 9•24 years ago
|
||
| Assignee | ||
Comment 10•24 years ago
|
||
| Assignee | ||
Comment 11•24 years ago
|
||
The second patch removes the last occurance of profile/migration/activation
dialogs done with appshell::run which is the cause of the problem. The case in
nsProfile.cpp only happens when you have run out of disk space when
auto-migrating. I'll have to put some code in to force that condition for testing.
Dan, Alec - can you review this one? it's the same story as the bugscape bug
you've seen.
Updated•24 years ago
|
Whiteboard: critical for 0.9.2 → critical for 0.9.2, have patch, need r and sr
Comment 12•24 years ago
|
||
beauty. r=danm
Comment 13•24 years ago
|
||
nice..looks great. sr=alecf
| Assignee | ||
Comment 14•24 years ago
|
||
Thanks guys. Updating status.
Whiteboard: critical for 0.9.2, have patch, need r and sr → critical for 0.9.2, have patch, need a=
Comment 15•24 years ago
|
||
a=chofmann for 0.9.1 branch and trunk when this is ready.
it would be good if we could get it in before monday morning builds if possible.
| Assignee | ||
Comment 16•24 years ago
|
||
Will do so before mon morn.
Whiteboard: critical for 0.9.2, have patch, need a= → critical for 0.9.2, ready to checkin
| Assignee | ||
Comment 17•24 years ago
|
||
Fix checked into trunk - doing branch next.
| Assignee | ||
Comment 18•24 years ago
|
||
Checked into branch.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: critical for 0.9.2, ready to checkin → critical for 0.9.2
Comment 19•24 years ago
|
||
Linux (2001-06-26-04.0.9.2 )
This bug should be re-opened because it takes second time to migrate
successfully.
Here is the step:
1. Remove .mozilla
2. setenv PROFILE_HOME /home/gor/qatest38
setenv PROFILE_NAME qatest38
./netscape -installer
Actual result: A blank activation window come up, and I have to click on X to
close the window.
3. Exit installer
4. Do a ./netscape -installer again
Actual result: The Activating window comes up with content, click on Cancel
Browser now comes up.
Expected result: it should migrate the first time.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 20•24 years ago
|
||
Re-closing. The problem which you are referring to happens only with commercial
and is a separate issue. It's http://bugscape.netscape.com/show_bug.cgi?id=5992.
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•