Bug 86922 - app hangs after profile migration dialog. r=danm/sr=alecf/a=chofmann